added GET endpoint for comments
