# api/swagger.yaml
@@ -12,6 +12,50 @@ consumes:
 produces:
 - "application/json"
 paths:
+  /comments:
+    get:
+      description: "Get comments"
+      operationId: "findComments"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "comment_id"
+        in: "query"
+        description: "Filter by comment id"
+        required: false
+        type: "string"
+      - name: "program_id"
+        in: "query"
+        description: "Filter by program id"
+        required: false
+        type: "string"
+      responses:
+        200:
+          description: "Comments returned"
+          schema:
+            type: "string"
+      x-swagger-router-controller: "Default"
+    post:
+      description: "Create comment"
+      operationId: "createComment"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "comment_data"
+        description: "data for new comment"
+        required: true
+        schema:
+          $ref: "#/definitions/CommentModel"
+      responses:
+        200:
+          description: "Comment succesfully created"
+        409:
+          description: "Comment already exists"
+          schema:
+            $ref: "#/definitions/Error"
+      x-swagger-router-controller: "Default"
+
   /queue:
     get:
       description: "Get queue"
@@ -309,6 +353,17 @@ definitions:
       code:
         type: "string"
       message:
+        type: "string"
+  CommentModel:
+    type: "object"
+    properties: 
+      id:
+        type: "string"
+      domain:
+        type: "string"
+      comment:
+        type: "string"
+      date:
         type: "string"
   LanguageModel:
     type: "object"
